--- a/styles/pages/mainpage.css
+++ b/styles/pages/mainpage.css
@@ -73,6 +73,7 @@
 
   border-right: 1px solid rgb(231, 231, 231);
   border-bottom: 1px solid rgb(231, 231, 231);
+  border-top: 1px solid rgb(231, 231, 231);
 
   display: flex;
   flex-direction: column;
@@ -99,6 +100,7 @@
   height: 40px;
   margin-bottom: 5px;
 }
+  
 
 .product-rating-container {
   display: flex;
@@ -108,28 +110,28 @@
 
 .product-rating-stars {
   width: 100px;
-  margin-right: 6px;
+  margin-right: 9px;
 }
-
+  
 .product-rating-count {
   color: rgb(1, 124, 182);
   cursor: pointer;
-  margin-top: 3px;
+  margin-top: 5px;
 }
-
+    
 .product-price {
-  font-weight: 700;
-  margin-bottom: 10px;
+font-weight: 700;
+margin-bottom: 10px;
 }
 
 .product-quantity-container {
-  margin-bottom: 17px;
+  margin-bottom: 17px;  
 }
 
 .product-spacer {
   flex: 1;
-}
-
+  } */
+  
 .added-to-cart,.isAdded {
   color: rgb(6, 125, 98);
   font-size: 16px;
@@ -137,23 +139,26 @@
   display: flex;
   align-items: center;
   margin-bottom: 8px;
-
   /* At first, the "Added to cart" message will
-     be invisible. Use JavaScript to change the
-     opacity and make it visible. */
+  be invisible. Use JavaScript to change the
+  opacity and make it visible. */
   opacity: 0;
-}
-
+    
+} 
+/*     
 .isAdded{
-  opacity:1
-}
+  opacity:1;
+} */
+
 .added-to-cart img {
   height: 20px;
   margin-right: 5px;
 }
-
+  
 .add-to-cart-button {
   width: 100%;
   padding: 8px;
   border-radius: 50px;
 }
+          
+          
